Fix "Sometimes scrollbar of prism shimmers through modal" 2
Fixes https://github.com/GHSVS-de/tpl_bs4ghsvs/issues/18
- Part 2

--- a/src/css/prism-ghsvs.css
+++ b/src/css/prism-ghsvs.css
@@ -24,6 +24,7 @@ pre > code[class*=language-] {
 pre[class*=language-] {
   max-height: 32rem;
   overflow: auto;
+	position: relative;
   z-index: 10;
 }
 
